--- a/src/main/resources/static/examples/tables/extended.html
+++ b/src/main/resources/static/examples/tables/extended.html
@@ -252,7 +252,7 @@
 	                                <p class="category">Here is a subtitle for this table</p>
 	                            </div>
 	                            <div class="content table-responsive table-full-width">
-	                                <table class="table">
+	                                <table class="table table-hover">
 	                                    <thead>
 	                                        <tr>
 	                                            <th class="text-center">#</th>
@@ -263,7 +263,7 @@
 	                                        </tr>
 	                                    </thead>
 	                                    <tbody>
-	                                        <tr>
+											<tr class="success">
 	                                            <td class="text-center">1</td>
 	                                            <td>Andrew Mike</td>
 	                                            <td>Develop</td>
