--- a/src/main/resources/static/documentation/elements.html
+++ b/src/main/resources/static/documentation/elements.html
@@ -1574,7 +1574,7 @@ $( &quot;#slider-default&quot; ).slider({
 <!-- panel row -->
 <div class="tim-row" id="panels-row">
     <h2>Panels
-        <small><a href="../examples/components/panels.html" target="_blank">Live Demo</a></small>
+        <small><a href="../index.html" target="_blank">Live Demo</a></small>
     </h2>
     <legend></legend>
     <p>
@@ -2511,7 +2511,7 @@ $( &quot;#slider-default&quot; ).slider({
 <!-- collapsable groups row -->
 <div class="tim-row" id="collapsable-row">
         <h2> Collapsible Groups
-            <small><a href="../examples/components/panels.html" target="_blank">Live Demo</a></small>
+            <small><a href="../index.html" target="_blank">Live Demo</a></small>
         </h2>
         <legend></legend>
             <p>
