--- a/src/main/resources/static/examples/pages/timeline.html
+++ b/src/main/resources/static/examples/pages/timeline.html
@@ -90,7 +90,7 @@
 <!--	                        <ul class="nav">-->
 <!--	                            <li><a href="../components/buttons.html">Buttons</a></li>-->
 <!--	                            <li><a href="../components/grid.html">Grid System</a></li>-->
-<!--	                            <li><a href="../components/panels.html">Panels</a></li>-->
+<!--	                            <li><a href="../components/index.html">Panels</a></li>-->
 <!--	                            <li><a href="../components/sweet-alert.html">Sweet Alert</a></li>-->
 <!--	                            <li><a href="../components/notifications.html">Notifications</a></li>-->
 <!--	                            <li><a href="../components/icons.html">Icons</a></li>-->
