--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="apple-touch-icon" sizes="76x76" href="../../assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="../../assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="assets/img/dmark.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/dmark.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
     <title>DANINA</title>
@@ -11,22 +11,21 @@
     <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
     <meta name="viewport" content="width=device-width"/>
 
-
     <!-- Bootstrap core CSS     -->
-    <link href="../../assets/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet"/>
 
     <!--  Paper Dashboard core CSS    -->
-    <link href="../../assets/css/paper-dashboard.css" rel="stylesheet"/>
+    <link href="assets/css/paper-dashboard.css" rel="stylesheet"/>
 
 
     <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="../../assets/css/demo.css" rel="stylesheet"/>
+    <link href="assets/css/demo.css" rel="stylesheet"/>
 
 
     <!--  Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
-    <link href="../../assets/css/themify-icons.css" rel="stylesheet">
+    <link href="assets/css/themify-icons.css" rel="stylesheet">
 </head>
 
 <body>
@@ -49,7 +48,7 @@
         <div class="sidebar-wrapper">
             <div class="user">
                 <div class="photo">
-
+                    <img src="assets/img/dmark.png" />
                 </div>
                 <div class="info">
                     <a data-toggle="collapse" href="#collapseExample" class="collapsed">
@@ -68,26 +67,20 @@
             <ul class="nav">
                 <li class="active">
                     <a data-toggle="collapse" href="#componentsExamples" aria-expanded="true">
-                        <i class="ti-package"></i>
+                        <i class="ti-book"></i>
                         <p>Danina Board
                             <b class="caret"></b>
                         </p>
                     </a>
                     <div class="collapse in" id="componentsExamples">
                         <ul class="nav">
-                            <li><a href="buttons.html">Buttons</a></li>
-                            <li><a href="grid.html">Grid System</a></li>
-                            <li class="active"><a href="panels.html">Essays and Debates</a></li>
-                            <li><a href="sweet-alert.html">Sweet Alert</a></li>
-                            <li><a href="notifications.html">Notifications</a></li>
-                            <li><a href="icons.html">Icons</a></li>
-                            <li><a href="typography.html">Typography</a></li>
+                            <li class="active"><a href="index.html">Essays and Debates</a></li>
                         </ul>
                     </div>
                 </li>
                 <li>
                     <a data-toggle="collapse" href="#pagesExamples">
-                        <i class="ti-gift"></i>
+                        <i class="ti-user"></i>
                         <p>
                             User Info
                             <b class="caret"></b>
@@ -95,11 +88,11 @@
                     </a>
                     <div class="collapse" id="pagesExamples">
                         <ul class="nav">
-                            <li><a href="../pages/timeline.html">Timeline Page</a></li>
-                            <li><a href="../pages/user.html">User Page</a></li>
-                            <li><a href="../pages/login.html">Login Page</a></li>
-                            <li><a href="../pages/register.html">Register Page</a></li>
-                            <li><a href="../pages/lock.html">Lock Screen Page</a></li>
+<!--                            <li><a href="../pages/timeline.html">Timeline Page</a></li>-->
+                            <li><a href="examples/pages/user.html">User Page</a></li>
+                            <li><a href="examples/pages/login.html">Login Page</a></li>
+<!--                            <li><a href="../pages/register.html">Register Page</a></li>-->
+<!--                            <li><a href="../pages/lock.html">Lock Screen Page</a></li>-->
                         </ul>
                     </div>
                 </li>
@@ -195,12 +188,11 @@
                                                             <tr>
                                                                 <th>Name</th>
                                                                 <th>Title</th>
-
                                                                 <th class="text-right">Actions</th>
                                                             </tr>
                                                             </thead>
 
-                                                            <tbody>
+                                                            <tbody id="demian_body">
                                                             <tr class="warning">
                                                                 <td>Jinseo</td>
                                                                 <td>Discussion</td>
@@ -217,8 +209,8 @@
                                                                 </td>
                                                             </tr>
                                                             <tr>
-                                                                <td>Jinseo</td>
-                                                                <td>Jinseo's Essay for Demian</td>
+                                                                <td id="name">Jinseo</td>
+                                                                <td id="title">Jinseo's Essay for Demian</td>
 
                                                                 <td class="td-actions text-right">
                                                                     <a href="#" rel="tooltip" title="Edit"
@@ -405,59 +397,61 @@
 </body>
 
 <!--   Core JS Files. Extra: PerfectScrollbar + TouchPunch libraries inside jquery-ui.min.js   -->
-<script src="../../assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-<script src="../../assets/js/jquery-ui.min.js" type="text/javascript"></script>
-<script src="../../assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="assets/js/jquery-ui.min.js" type="text/javascript"></script>
+<script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
 
 <!--  Forms Validations Plugin -->
-<script src="../../assets/js/jquery.validate.min.js"></script>
+<script src="assets/js/jquery.validate.min.js"></script>
 
 <!--  Plugin for Date Time Picker and Full Calendar Plugin-->
-<script src="../../assets/js/moment.min.js"></script>
+<script src="assets/js/moment.min.js"></script>
 
 <!--  Date Time Picker Plugin is included in this js file -->
-<script src="../../assets/js/bootstrap-datetimepicker.js"></script>
+<script src="assets/js/bootstrap-datetimepicker.js"></script>
 
 <!--  Select Picker Plugin -->
-<script src="../../assets/js/bootstrap-selectpicker.js"></script>
+<script src="assets/js/bootstrap-selectpicker.js"></script>
 
 <!--  Checkbox, Radio, Switch and Tags Input Plugins -->
-<script src="../../assets/js/bootstrap-checkbox-radio-switch-tags.js"></script>
+<script src="assets/js/bootstrap-checkbox-radio-switch-tags.js"></script>
 
 <!-- Circle Percentage-chart -->
-<script src="../../assets/js/jquery.easypiechart.min.js"></script>
+<script src="assets/js/jquery.easypiechart.min.js"></script>
 
 <!--  Charts Plugin -->
-<script src="../../assets/js/chartist.min.js"></script>
+<script src="assets/js/chartist.min.js"></script>
 
 <!--  Notifications Plugin    -->
-<script src="../../assets/js/bootstrap-notify.js"></script>
+<script src="assets/js/bootstrap-notify.js"></script>
 
 <!-- Sweet Alert 2 plugin -->
-<script src="../../assets/js/sweetalert2.js"></script>
+<script src="assets/js/sweetalert2.js"></script>
 
 <!-- Vector Map plugin -->
-<script src="../../assets/js/jquery-jvectormap.js"></script>
+<script src="assets/js/jquery-jvectormap.js"></script>
 
 <!--  Google Maps Plugin    -->
 <script src="https://maps.googleapis.com/maps/api/js"></script>
 
 <!-- Wizard Plugin    -->
-<script src="../../assets/js/jquery.bootstrap.wizard.min.js"></script>
+<script src="assets/js/jquery.bootstrap.wizard.min.js"></script>
 
 <!--  Bootstrap Table Plugin    -->
-<script src="../../assets/js/bootstrap-table.js"></script>
+<script src="assets/js/bootstrap-table.js"></script>
 
 <!--  Plugin for DataTables.net  -->
-<script src="../../assets/js/jquery.datatables.js"></script>
+<script src="assets/js/jquery.datatables.js"></script>
 
 <!--  Full Calendar Plugin    -->
-<script src="../../assets/js/fullcalendar.min.js"></script>
+<script src="assets/js/fullcalendar.min.js"></script>
 
 <!-- Paper Dashboard PRO Core javascript and methods for Demo purpose -->
-<script src="../../assets/js/paper-dashboard.js"></script>
+<script src="assets/js/paper-dashboard.js"></script>
 
 <!-- Paper Dashboard PRO DEMO methods, don't include it in your project! -->
-<script src="../../assets/js/demo.js"></script>
+<script src="assets/js/demo.js"></script>
+
+<script src="examples/components/js/writing.js"></script>
 
 </html>
